--- a/ui/SchemaConstructor.ui
+++ b/ui/SchemaConstructor.ui
@@ -34,6 +34,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="exportButton">
+        <property name="text">
+         <string>Экспорт</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
