--- a/ui/SchemaConstructor.ui
+++ b/ui/SchemaConstructor.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Создание проекта</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -82,7 +82,7 @@
       <item>
        <widget class="QPushButton" name="exportButton">
         <property name="text">
-         <string>Экспорт</string>
+         <string>Сохранить проект</string>
         </property>
        </widget>
       </item>
